--- a/archive.html
+++ b/archive.html
@@ -21,7 +21,7 @@ header-img: "img/bg-little-universe.jpg"
 
 				{% capture tags %}
 				{% for tag in site.tags %}
-				{% if tag[1].size > 2 %}
+				{% if tag[1].size > site.featured-condition-size %}
 				<a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
 					data-encode="{{ tag[0] | strip | url_encode }}" class="tag-button" title="{{ tag[0] }}"
 					rel="{{ tag[1].size }}">
