--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Wolf Economy
-description: Committed to delivering economy news
+description: Committed to delivering U.S. economy news
 ---
 
 {% for post in paginator.posts %}
